# ResumeGen

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.pdf-service  LICENSE  README.md  docker-compose.yml  pyproject.toml
PdfService/: index.js  package.json  server.js
data/: cover_letter.json  cover_letter_example.json  personal_info.json  personal_info_example.json  resume.json  resume_example.json
resumegen/: __init__.py  api.py  cli.py  jinja_render.py  launcher.py  pdf_service.py  storage.py  utils.py
resumegen/models/: __init__.py  cover_letter.py  personal_info.py  resume.py
resumegen/templates/: cover_letter_template.html.j2  resume_template.html.j2  style.css
tests/: README.md  conftest.py  test_api.py  test_cli.py
